name:                json
version:             0.1.0.0
synopsis:            JSON library
description:         Please see README.md
homepage:            https://github.com/mharrys/json
license:             LGPL
license-file:        LICENSE
author:              Mattias Harrysson
maintainer:          mathar@kth.se
copyright:           (c) Mattias Harrysson 2015
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.JSON
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 2.1 && < 4
  default-language:    Haskell2010

executable json
  hs-source-dirs:      cli
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , json
                     , parsec >= 2.1 && < 4
  default-language:    Haskell2010

test-suite json-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , json
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mharrys/json
